Merge sotatek repository into cardano foundation repository